# simple-time-tracker

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: database.rs  main.rs  style.rs
