[package]
name = "simple_time_tracker"
version = "0.1.0"
authors = ["Infality <infality@420blaze.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3", features = ["tokio", "svg"] }
iced_native = "0.4"
chrono = "0.4"
rusqlite = { version = "0.25.3", features = ["bundled"] }

